--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "Martin_pic.jpg"
+  avatar           : "Martin_pic.png"
   name             : "About me"
   pronouns         : # example: "she/her"  
   bio              : "I am a PhD-student with research in Bayesian Statistics."
