--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   avatar           : "profile.png"
   name             : "About me"
   pronouns         : # example: "she/her"  
-  bio              : "I am a PhD-student with research in Bayesian Statistics."
+  bio              : "I am currently pursuing a PhD with a focus on Bayesian statistical methods."
   location         : "Clermont-Ferrand"
   employer         : "LMBP, UCA"
   uri              : # URL
