--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   avatar           : "Martin_pic.png"
   name             : "Contact"
   pronouns         : # example: "she/her"  
-  bio              : "I am currently pursuing a PhD with a focus on Bayesian statistical methods."
+  bio              : "I am currently pursuing a PhD with a focus on Bayesian statistical methods"
   location         : "Clermont-Ferrand"
   employer         : "LMBP, UCA"
   uri              : # URL
