--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ title                    : "Martin Metodiev"
 title_separator          : "-"
 name                     : &name "Martin Metodiev"
 description              : &description "personal description"
-url                      : m-crypto645.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io" or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
+url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io" or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "M-crypto645/m-crypto645.github.io"
 
@@ -25,7 +25,7 @@ author:
   avatar           : "Martin_pic.png"
   name             : "Contact"
   pronouns         : # example: "she/her"  
-  bio              : "I am currently pursuing a PhD with a focus on Bayesian statistical methods"
+  bio              : "I am currently pursuing a PhD with a focus on Bayesian statistical methods."
   location         : "Clermont-Ferrand"
   employer         : "LMBP, UCA"
   uri              : # URL
