--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ author:
   pronouns         : # example: "she/her"  
   bio              : # "I am currently pursuing a PhD with a focus on Bayesian statistical methods."
   location         : "Clermont-Ferrand"
-  employer         : "LMBP, UCA"
+  employer         : "UCA, LMBP, PAS"
   uri              : # URL
   email            : "martin.metodiev@doctorant.uca.fr" 
 
