--- a/_config.yml
+++ b/_config.yml
@@ -59,7 +59,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : Martin Metodiev
+  linkedin         : https://www.linkedin.com/in/martin-metodiev-994613363/
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
