--- a/_config.yml
+++ b/_config.yml
@@ -13,9 +13,9 @@ title                    : "Martin Metodiev"
 title_separator          : "-"
 name                     : &name "Martin Metodiev"
 description              : &description "personal description"
-url                      : https://m-crypto645.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io" or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
+url                      : https://m-metodiev.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io" or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "M-crypto645/m-crypto645.github.io"
+repository               : "m-metodiev/m-metodiev.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
@@ -45,7 +45,7 @@ author:
   bitbucket        : # Username - Update with your username on the site
   codepen          : # Username
   dribbble         : # Username
-  github           : "M-crypto645"
+  github           : "m-metodiev"
   kaggle           : # Username  
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
